# Dissect

./: .gitignore  COMPLETED_V1.txt  FEATURES.md  README.md  ROADMAP.txt  corexai_2_full_blueprint.docx  index.html  package-lock.json  package.json  vite.config.js
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AntiAnalysisPage.jsx  ApiTracingPage.jsx  BinDiffPage.jsx  CfgComponents.jsx  ChatPage.jsx  DashboardPage.jsx  DebuggerPage.jsx  DisassemblyPage.jsx  EmulationPage.jsx  FlirtPage.jsx  KnowledgePage.jsx  NetworkCapturePage.jsx  PatcherPage.jsx  PlatformPage.jsx  PluginPage.jsx  ProcessAttachPage.jsx  ReportPage.jsx  SandboxPage.jsx  ScannerPage.jsx  SettingsPage.jsx  StringAnalysisPage.jsx  SystemPage.jsx  shared.jsx
src/store/: useStore.js
src/utils/: peHelpers.js
src/workers/: analysis.worker.js  workerApi.js
