[package]
name = "dissect"
version = "1.0.0"
description = "Dissect — Binary Analysis & AI-Powered Reverse Engineering Studio"
authors = ["Antigravity Research"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
goblin = "0.7"
hex = "0.4"
sha2 = "0.10"
digest = "0.10"
sysinfo = "0.30"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
md-5 = "0.10"
sha1 = "0.10"
capstone = "0.12"
ureq = "2.10"
